# fractal-zoom

./: .gitignore  CMakeLists.txt  README.md
include/: jo_gif.h
src/: animated_gif.h  frac.h  frac_constants.h  frac_cpu.h  instruction_set.h  main.cpp  parallelizer.h  timer.h  types.h
